# playground

./: .gitignore  README.md  amber.yaml  dashboard_backend.py  env.example  env.load-test.example  pyproject.toml
admin_control_plane/: dashboard_backend.py
admin_dashboard/: .env.example  .env.production  dashboard_backend.py  index.html  package.json  vite.config.ts
admin_dashboard/src/: App.tsx  index.css
andy_agents/: README.md  weather_agent.py
cli/: README.md  pyproject.toml
cli/amber_cli/: __init__.py  config_loader.py  main.py
cli/amber_cli/commands/: config.py  deploy.py  init.py  status.py
dashboard/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
deprecated/: executor_app.py  mismatch_diagnostic.py  single_server_poc.py
deprecated/andy_agents/: README.md
deprecated/backend_api/: .env.example  README.md  main.py
deprecated/test_agents/: research_handoff_agent.py  weather_agent.py
deprecated/tests/: basefile_openaiSDK.py
example_customer_app/: README.md  main.py  worker.py
example_customer_app/static/: app.js  styles.css
example_customer_app/templates/: index.html
example_customer_app/user_agents/: account_research_error_demo.py  another_multi_agent_demo.py  error_agent_demo.py  multi_agent_demo.py  (+2 more)
infra/: README.md
runtime/: runtime.py
tests/: README.md  open_inference_test.py  research_agent.py  test_dashboard_backend.py  test_dashboard_client.py  test_queue_metrics.py  test_sdk_reliability.py
user_agents/: multi_agent_demo.py  single_agent_demo.py
(+118 files in other folders)
