[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amber-cli"
version = "0.1.0"
description = "Amber Runtime CLI — deploy and manage durable AI agents"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "boto3>=1.34",
    "pyyaml>=6.0",
]

[project.scripts]
amber = "amber_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["amber_cli*"]
